[package]
name = "delta_db"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
hyper = "0.13"
hex = "0.4"
sha2 = "0.8"
byteorder = "1.3"
flate2 = "1.0"
fnv = "1.0"
url = "2.0"
getopts = "0.2"
parking_lot = "0.11"

[dependencies.rocksdb]
version = "0.14"
default-features = false
features = ["snappy"]

[dev-dependencies]
lipsum = "0.7"
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
